--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2478,8 +2478,10 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
     font-size: 14px !important;
 }
 
-
-
+.auto-height-table .layui-table-cell {
+    height: auto !important;
+    white-space: normal !important;
+}
 
 
 
