模板库查询条件

--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2484,7 +2484,9 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 }
 
 
-
+.auto-height-table .layui-table-view{
+    margin: 0px !important;
+}
 
 
 
