--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -537,7 +537,7 @@
          * 选择模板短信
          * */
         $("body").on("click","#sms_module,#tabs .tab1",function (){
-            console.log(this);
+            // console.log(this);
             sms_table_init("form#form-recommend-sms-module",1);
         })
 
@@ -568,6 +568,7 @@
                 ,search: false
                 ,cols: [[
                     {type:'checkbox', fixed: 'left', hide:true}
+                    ,{field:'sms_id', title: 'id', hide:true}
                     ,{field:'sms_content', title: '短信内容'}
                     ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:250}
                 ]]
@@ -589,12 +590,21 @@
             if((form == "form#form-recommend-sms-module" && init_i == 0) || flag == 1) {
                index_sms = we.api.open_current_page_layer($(".sms-module-layer"),'选择短信模版',{zIndex:19891016
                 },['80%' , '80%']);//搜索短信模版弹框
+
+                // $.each($("#content").find("form").attr('id'),function (index, value) {
+                //     console.log(value);
+                // })
+
+                formSearch.api.searchForm($("form#form-recommend-sms-module"));
+                formSearch.api.searchForm($("form#form-history-sms-module"));
+                formSearch.api.searchForm($("form#form-sms-module"));
+                formSearch.api.searchForm($("form#form-latest-sms-module"));
             }
             init_i ++;
             /**
              * 绑定监听事件
              * */
-            formSearch.api.searchForm($(form));
+            // formSearch.api.searchForm($(form));
             // console.log(index_sms);
             //formSearch.api.searchForm($("form#form-recommend-sms-module"));////短信搜索初始化【推荐场景】
             //formSearch.api.searchForm($("form#form-sms-module"));//短信搜索初始化【模板库】
@@ -610,14 +620,16 @@
 
         //头工具栏事件
         table.on('tool(table_sms)', function(obj){
-            // console.log(obj);
-            var data = obj.data.sms_content;
+            console.log(obj);
+            var data = obj.data;
+            console.log(data.sms_id);
             if(obj.event === 'use_sms_module'){
-                // console.log(data);
                 layer.close(index_sms)
-                $(".sms-content").val(data)
+                $(".sms-content").val(data.sms_content)
             } else if(obj.event === 'del_sms_module') {
+                var sms_id = data.sms_id;
 
+                //执行删除
             }
         })
 
